tests/gabc-dump/should-fail/unclosed-under-ledger-2.gabc
name: unclosed under-staff ledger line (2);
%%
(c4) g(g) h(h[ull:2mm{2mm]) i(i[ull:2mm{2mm])
